test/resolver/fail/resolve_import_undefined.ms
import { baz } from "foo_lib";
val x := baz;
